Added more translations [1/3]

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -833,6 +833,7 @@
     <string name="time_5_5_seconds">5.5 seconds</string>
     <string name="time_6_seconds">6 seconds</string>
     <string name="time_7_seconds">7 seconds</string>
+    <string name="time_7_5_seconds">7.5 seconds</string>
     <string name="time_8_seconds">8 seconds</string>
     <string name="time_9_seconds">9 seconds</string>
     <string name="time_10_seconds">10 seconds</string>
