--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -689,6 +689,7 @@
     <string name="time_5_5_seconds">5,5 secondes</string>
     <string name="time_6_seconds">6 secondes</string>
     <string name="time_7_seconds">7 secondes</string>
+    <string name="time_7_5_seconds">7,5 secondes</string>
     <string name="time_8_seconds">8 secondes</string>
     <string name="time_9_seconds">9 secondes</string>
     <string name="time_10_seconds">10 secondes</string>
