--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -71,7 +71,7 @@
 
     <!-- General Strings -->
     <string name="advanced_settings">高级设置</string>
-    <string name="misc_short">杂项</string>
+    <string name="misc_short">其它</string>
     <string name="custom_app_icon_successfully">的图标设置成功！</string>
     <string name="select_custom_app_title">自定义应用</string>
     <string name="text_on">开启</string>
@@ -107,12 +107,13 @@
     <string name="title_show_screenshot">显示屏幕截图</string>
     <string name="title_show_airplane_toggle">显示飞行模式</string>
     <string name="power_menu_expanded_desktop">显示全屏开关</string>
-    <string name="expanded_desktop_summary">显示或者更改全屏模式</string>
-   <string name="expanded_desktop_disabled">关闭</string>
-    <string name="expanded_desktop_only_nav_bar">隐藏导航栏</string>
-    <string name="expanded_desktop_only_status_bar">隐藏状态栏</string>
-    <string name="expanded_desktop_both_hidden">隐藏导航和状态栏</string>
+    <string name="expanded_desktop_cat">高级设置</string>
+    <string name="expanded_desktop_summary_status_bar">状态栏可见</string>
+    <string name="expanded_desktop_summary_no_status_bar">状态栏隐藏</string>
+    <string name="expanded_desktop_disabled">关闭</string>
     <string name="title_show_volume_state_toggle">音量状态</string>
+    <string name="expanded_desktop_status_bar">状态栏可见</string>
+    <string name="expanded_desktop_no_status_bar">状态栏隐藏</string>
     <string name="title_show_navbar_hide">显示导航开关</string>
     <string name="title_show_reboot_keyguard">锁屏界面开启重启菜单</string>
 
@@ -494,7 +495,7 @@
     <string name="always_show_invincible_icons">总是隐藏图标</string>
     <string name="always_show">总是显示图标</string>
     <string name="default_jb_with_invincible_icons_when_hidden">默认JB模式不可用隐藏</string>
-    <string name="navbar_action_home">首页</string>
+    <string name="navbar_action_ime">打开输入法切换器</string>
     <string name="navbar_action_lastapp">最后应用</string>
     <string name="glow_times_off">关闭</string>
     <string name="glow_times_superquick">超快速</string>
@@ -505,7 +506,7 @@
     <string name="top_of_navbar">状态栏的顶部</string>
     <string name="bottom_of_navbar">状态栏底部</string>
     <string name="regular">正常</string>
-    <string name="center_mirrored">剧中</string>
+    <string name="center_mirrored">居中</string>
     <string name="size_0_dp">0 dp（隐藏）</string>
 
     <!-- Navigation Bar (Strings) -->
@@ -559,9 +560,11 @@
     <string name="navbar_icon_menu">自定义图标</string>
     <string name="navbar_delete_menu">删除虚拟键</string>
 
-    <!-- Auto-Hide Status Bar -->
-    <string name="auto_hide_statusbar">自动隐藏状态栏</string>
-    <string name="auto_hide_statusbar_summary">如果没有通知的时候自动隐藏状态栏</string>
+    <!-- Hidden Statusbar Pulldown -->
+    <string name="hidden_statusbar_pulldown_title">Hidden Statusbar Pulldown</string>
+    <string name="hidden_statusbar_pulldown_summary">允许的状态被拉下来时，隐藏在全屏应用程序</string>
+    <string name="hidden_statusbar_pulldown_timeout_title">隐藏状态栏下拉超时</string>
+    <string name="hidden_statusbar_pulldown_timeout_summary">隐藏状态栏窗口超时</string>
 
     <!-- Nav Bar Widgets -->
     <string name="navbar_widgets">导航栏插件</string>
@@ -791,6 +794,7 @@
     <string name="time_5_5_seconds">5.5 秒</string>
     <string name="time_6_seconds">6 秒</string>
     <string name="time_7_seconds">7 秒</string>
+    <string name="time_7_5_seconds">7.5 秒</string>
     <string name="time_8_seconds">8 秒</string>
     <string name="time_9_seconds">9 秒</string>
     <string name="time_10_seconds">10 秒</string>
@@ -837,6 +841,10 @@
     <string name="lockscreen_battery_status_alwayson">总是在锁屏中显示</string>
 
     <string name="ls_shortcuts_title">锁屏快捷方式</string>
+
+    <string name="screen_security_category">屏幕保护</string>
+    <string name="screen_security_title">锁屏</string>
+    <string name="screen_security_summary">查看或更改屏幕锁定安全，延迟和超时的设置</string>
 
     <!-- ParanoidAndroid: Lockscreen Shortcuts -->
     <string name="icon_picker_type">选择图标类型:</string>
@@ -895,9 +903,37 @@
     <string name="ls_color_alpha_title">锁屏色调</string>
     <string name="ls_color_alpha_summary">修改锁屏的色调</string>
 
+    <!-- Screen security - Screen security   -->
+    <string name="additional_options_title">附加选项</string>
+    <string name="unlock_menu_unlock_title">菜单键解锁</string>
+    <string name="unlock_menu_unlock_summary">按下菜单按钮解锁装置</string>
+    <string name="unlock_home_unlock_title">主页键解锁</string>
+    <string name="unlock_home_unlock_summary">按按钮解锁装置</string>
+    <string name="unlock_quick_unlock_control_title">快速解锁</string>
+    <string name="unlock_quick_unlock_control_summary">自动解锁时，正确的PIN/密码进入</string>
+
+    <!-- Slide lock delay -->
+    <string name="delay_and_timeout_title">锁屏延迟设置</string>
+    <string name="slide_lock_delay_title">延迟锁定屏幕</string>
+    <string name="slide_lock_timeout_delay_title">延迟后超时</string>
+    <string name="slide_lock_screenoff_delay_title">延时后关闭</string>
+    <string name="slide_lock_delay_none">无</string>
+    <string name="slide_lock_delay_1s">1 秒</string>
+    <string name="slide_lock_delay_5s">5 秒</string>
+    <string name="slide_lock_delay_10s">10 秒</string>
+    <string name="slide_lock_delay_15s">15 秒</string>
+    <string name="slide_lock_delay_30s">30 秒</string>
+    <string name="slide_lock_delay_1m">1 分钟</string>
+    <string name="slide_lock_delay_5m">5 分钟</string>
+    <string name="slide_lock_delay_10m">10 分钟</string>
+    <string name="slide_lock_delay_30m">30 分钟</string>
+
+    <!-- Lock screen vibrate settings -->
+    <string name="lockscreen_vibrate_enabled_title">振动</string>
+    <string name="lockscreen_vibrate_enabled_head">当正在解锁的时候振动</string>
     <!--- Lock clock -->
     <string name="lock_clock_title">时钟部件</string>
-    <string name="lock_clock_summary">查看和编辑时钟部件在桌面和锁屏界面的显示</string>
+    <string name="lock_clock_summary">"查看并更改 'cLock' 如何在桌面和锁屏小部件上显示"</string>
 
     <!-- Hybrid -->
     <string name="hybrid_settings_title">混合特性</string>
